<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Enter and view your Tanita Scale relate info</string>
    <string name="app_name">Tanita Scale</string>
    <string name="addButton">Add a New Person</string>
    <string name="viewButton">View a Person</string>
    <string name="addTitle">Add a new person</string>
    <string name="viewTitle">Pick a new person</string>
    <string name="name">Name</string>
    <string name="next">Next</string>
    <string name="enterYour">Enter your %1$s</string>
    <string name="weight">Weight</string>
    <string name="visceral_fat">Visceral Fat</string>
    <string name="dci">Daily Caloric Intake</string>
    <string name="metabolic_age">Metabolic Age</string>
    <string name="physic_rating">Physic Rating</string>
    <string name="muscle_mass_arm_left">Muscle for your Left Arm</string>
    <string name="muscle_mass_arm_right">Muscle for your Right Arm</string>
    <string name="muscle_mass_leg_left">Muscle for your Left Leg</string>
    <string name="muscle_mass_leg_right">Muscle for your Right Leg</string>
    <string name="muscle_mass_total">Total Muscle Mass</string>
    <string name="muscle_mass_trunk">Muscle for your Trunk</string>    
    <string name="bone_mass">Bone Mass</string>
    <string name="body_water_percentage">Body Water Percentage</string>
    <string name="body_fat_arm_left">Body Fat for your Left Arm</string>
    <string name="body_fat_arm_right">Body Fat for your Right Arm</string>
    <string name="body_fat_leg_left">Body Fat for your Left Leg</string>
    <string name="body_fat_leg_right">Body Fat for your Right Leg</string>
    <string name="body_fat_total">Total Body Fat</string>    
    <string name="body_fat_trunk">Body Fat for your Trunk</string>
    <string name="add">Add</string>
    <string name="view">View</string>
    <string name="save">Save</string>
    <string name="colon"> : </string>
    <string name="generic_error_message">Please enter a valid value</string>
    <string name="valid_name">Name added</string>
    <string name="send_email">Send E-mail</string>
    <string name="email">E-mail</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="contentDescription">Image to put meaning to the numbers.</string>
    <string name="averageText">Average</string>
    <string name="averageValue"></string>
    <string name="previousText">Previous</string>
    <string name="previousValue"></string>
    <string name="settingsButton">Settings</string>
    <string name="singleUser">Enable Single User Mode?</string>
</resources>