<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/PreviousText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previousText" />

        <TextView
            android:id="@+id/colon1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon" />

        <TextView
            android:id="@+id/AverageValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previousValue" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/AverageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/averageText" />

        <TextView
            android:id="@+id/colon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon" />

        <TextView
            android:id="@+id/averageValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/averageValue" />
    </LinearLayout>

    <TextView
        android:id="@+id/enter_your"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterYour" />

    <EditText
        android:id="@+id/editTextEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:numeric="decimal" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next" />

</LinearLayout>